🐛 fix pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,6 @@ license = {text = "MIT"}
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
+
+[tool.pdm.build]
+includes = ["nonebot"]
